--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,10 @@ pillow<7
 packaging
 ipywidgets==7.5.1
 torch==1.6.0
+graphviz
+ipywidgets
+matplotlib
+nbdev>=0.2.12
+pandas
+scikit_learn
+sentencepiece
