--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-voila
-fastai>=2,<=2.0.6
-fastcore==1.0.0
-fastbook
-pillow<7
-packaging
+voila==0.2.4
+fastai==2.1.8
+fastcore==1.3.11
+fastbook==0.0.16
+pillow==8.0.1
+packaging==20.4
 ipywidgets==7.5.1
-torch==1.6.0
-graphviz
-ipywidgets
-matplotlib
-nbdev>=0.2.12
-pandas
+torch==1.7.0
+graphviz==0.15
+matplotlib==3.3.3
+nbdev==1.1.5
+pandas==1.1.4
